--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title> Code Quiz </title>
         <nav class="nav">
             <a class="nav-link active" href="#">High Scores</a>
+            <div id="timer">
+                <h1 id="counter"> </h1>
+            </div>
         </nav>
 
 
@@ -15,7 +18,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.js">
 
 </head>
 
@@ -35,39 +37,22 @@
             <button id="start"> Start Quiz </button>
         </div>
         </p>
-        <div id="quiz" style="display :none;">
+
+        <div id="quiz">
             <p id="question"> </p>
-            <div id="timer">
-                <div id="counter"> 75 </div>
-            </div>
             <div id="answers">
-                <div class="answer" id="A" onclick="checkAnswer('A')"> A </div>
-                <div class="answer" id="B" onclick="checkAnswer('B')"> B </div>
-                <div class="answer" id="C" onclick="checkAnswer('C')"> C </div>
-                <div class="answer" id="D" onclick="checkAnswer('D')"> D </div>
+                <ol>
+                    <button id="0"> </button>
+                    <button id="1"> </button>
+                    <button id="2"> </button>
+                    <button id="3"> </button>
+                </ol>
             </div>
         </div>
 
     </div>
 
-    <script>
-        // Set the date we're counting down to
-        var countdownTimer = 100;
-
-        function start() {
-            console.log(countdownTimer);
-        }
-
-        console.log('button', document.querySelector('#start'));
-        document.querySelector("#start").addEventListener('click', function () {
-            setInterval(countdown, 6000);
-
-        })
-        function countdown() {
-            countdownTimer--;
-        }
-
-    </script>
+    <script src="script.js"> </script>
 
 </body>
 
